--- a/admin-side.html
+++ b/admin-side.html
@@ -40,8 +40,8 @@
           <div>
             <a href="index.html"
               ><h1>
-                <span class="clr-red">CampusCrave</span>
-                <span class="clr-green">Canteen Admin</span>
+                <span class="clr-red">Campus</span>
+                <span class="clr-green">Crave</span>
               </h1></a
             >
           </div>
